# neutron-encryption

./: .coveragerc  .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  setup.cfg  tox.ini
devstack/: plugin.sh  settings
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: contributing.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
neutron-encryption/: __init__.py
neutron-encryption/tests/: test_neutron-encryption.py
neutron_encryption/db/: encryption_db.py
neutron_encryption/extensions/: encryption.py
neutron_encryption/services/encryption/: plugin.py
releasenotes/source/: conf.py  index.rst
