[metadata]
name = neutron-encryption
summary = OpenStack Boilerplate contains all the boilerplate you need to create an OpenStack package.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://www.openstack.org/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[files]
packages =
    neutron-encryption
[entry_points]
neutron.service_plugins =
    encryption = neutron_encryption.services.encryption.plugin:EncryptionDriverPlugin
    neutron.services.encryption.plugin.EncryptionDriverPlugin = neutron_encryption.services.encryption.plugin:EncryptionDriverPlugin